--- a/package.json
+++ b/package.json
@@ -21,5 +21,19 @@
   "bugs": {
     "url": "https://github.com/Chemchu/ERPRegistration/issues"
   },
-  "homepage": "https://github.com/Chemchu/ERPRegistration#readme"
+  "homepage": "https://github.com/Chemchu/ERPRegistration#readme",
+  "dependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "@types/express": "^4.17.13",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-winston": "^4.2.0",
+    "nodemailer": "^6.7.5",
+    "typescript": "^4.7.3",
+    "winston": "^3.7.2"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.44",
+    "@types/nodemailer": "^6.4.4"
+  }
 }
