--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
+    "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.5",
     "typescript": "^4.7.3",
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.44",
     "@types/nodemailer": "^6.4.4"
   }
