--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "homepage": "https://github.com/Chemchu/ERPRegistration#readme",
   "dependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
