--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tsconfig/node16": "^1.0.3",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
+    "aws-sdk": "^2.1169.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
